[package]
name = "utreexo"
version = "0.0.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT"
description = "A dynamic hash based accumulator for UTXO set"
homepage = "https://github.com/devashishdxt/utreexo"
repository = "https://github.com/devashishdxt/utreexo"
categories = ["cryptography", "data-structures"]
keywords = ["blockchain", "bitcoin", "utxo", "accumulator", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = { version = "0.5", default-features = false }
bit-vec = { version = "0.6", default-features = false }

[features]
default = []
std = ["blake2b_simd/std", "bit-vec/std"]
