[package]
name = "utreexo"
version = "0.0.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT"
description = "A dynamic hash based accumulator for UTXO set"
homepage = "https://github.com/devashishdxt/utreexo"
repository = "https://github.com/devashishdxt/utreexo"
categories = ["cryptography", "data-structures"]
keywords = ["blockchain", "bitcoin", "utxo", "accumulator", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = { version = "0.6", default-features = false }
blake3 = { version = "1.0", default-features = false }
indexmap = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"

[features]
default = []
serde-1 = ["serde", "bit-vec/serde_no_std", "indexmap/serde-1"]
std = ["blake3/std", "bit-vec/std"]

[[bench]]
name = "utreexo"
harness = false
